# fast-poisson-logpmf

./: CMakeLists.txt  README.md  setup.py
source/: __init__.py  poisson_logpmf.py
source/backend/: bindings.cpp  common.h  kernels.cu  kernels.h
